@startuml
interface Filter {
    + boolean accept(Object x)
}

class ShortWordFilter {
    + boolean accept(Object x)
}

class ShortLister {
    + static void main(String[] args)
}

class BigRectangleFilter {
    + boolean accept(Object x)
}

class BigRectLister {
    + static void main(String[] args)
}

' Implementations (Dotted Line for Interface Implementation)
ShortWordFilter .|> Filter
BigRectangleFilter .|> Filter

' Dependencies (Solid Line with Arrow for Usage)
ShortLister --> ShortWordFilter : "Uses"
BigRectLister --> BigRectangleFilter : "Uses"

@enduml